2001-07-20 Kevin Vandersloot <kfv101@psu.edu>

	*favorites.c (create_tree): don't do g_list_copy.

2001-07-20 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (get_info): convert the name to utf8 here and
	don't duplicate the string twice to fix a memory leak

2001-07-19 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (refresh_list): remove the call to g_list_copy
	as it caused a crash. I need to understand GLists better.
	Fixes bug #57782

2001-07-18 Kevin Vandersloot <kfv101@psu.edu>

	*procdialogs.c: add preferences dialog.

	*procdialogs.c (create_renice_dialog): cosmetic improvements.
	I'm still not satisfied with this dialog.

2001-07-18 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (proctable_get_value): use
	e_utf8_from_locale_string for the process name to properly
	display names in the tree. This generates a lot of warnings
	so I hope there is a better solution.

	*procman.h: add new config variable show_pretty_names
	to show the .desktop names

	*proctable.c (get_info): Get the pretty name if needed.

	*favorites.c (get_blacklist): remove an unessecary g_print.

2001-07-18 Kevin Vandersloot <kfv101@psu.edu>

	Create a hide message dialog similar to the end process one.

	*procdialogs.c: add the dialog in the same fashion as the end
	process one.

	*procman.[c,h]: add boolean to config show_hide_message.

	*callbacks.c (cb_hide_process): show the dialog if needed.

2001-07-16 Kevin Vandersloot <kfv101@psu.edu>

	*interface.c: make the menu keyboard shortcuts use CTRL

2001-07-16 Kevin Vandersloot <kfv101@psu.edu>

	*interface.c (create_main_window): put cpu/mem/swap progress
	meters on a faster timeout.

	*callbacks.[c,h] (cb_progress_meter_timeout): new callback
	for cpu/mem/swap timeout

	*proctable.c (proctable_update_progress_meters): new function
	to update the progress meters.

2001-07-16 Kevin Vandersloot <kfv101@psu.edu>

	*procman.h: add config option to not show icons. Speeds up
	load time.
