@@ -1,5 +1,13 @@
 2001-07-20 Kevin Vandersloot <kfv101@psu.edu>
 
+	*procman.[c,h]: new config option to show threads. Defaults to not showing
+	threads.
+	
+	*proctable.c (insert_info_to_tree): move a little code and don't insert
+	info process is a thread and the config option is FALSE.
+
+2001-07-20 Kevin Vandersloot <kfv101@psu.edu>
+
 	*favorites.c (create_tree): don't do g_list_copy.
 
 2001-07-20 Kevin Vandersloot <kfv101@psu.edu>
